test/grammar/schema/invalid/no_schema/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:11
  |
1 | JohnDoe = Person {
  |           ^ name 'Person' is not defined
  |